--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
-<body>
-<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
@@ -22,10 +20,10 @@
        <div class="collapse navbar-collapse" id="collapsibleNavbar">
          <ul class="navbar-nav">
            <li class="nav-item">
-             <a class="nav-link" href="https://github.com/Frosty9424/frostworld_login">REPO Link</a>
+             <a class="nav-link" href="https://github.com/Akennemer/Hotelraid">REPO Link</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">NUChecker</a>
+             <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fakennemer.github.io%2FHotelraid%2F">NUChecker</a>
            </li>
          </ul>
        </div>
