--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
@@ -33,9 +32,8 @@
 
 <!--Registration Code-->
 <form action="action_page.php">
-  <form>
   <div class="container">
-    <h1>So you're interested in raiding with the big boys?</h1><form>
+    <h1>So you're interested in raiding with the big boys?</h1>
     <p>Go ahead and fill this out for us, please!</p>
     <hr>
 
@@ -47,16 +45,15 @@
 
     <label for="Charname"><b>Character Name</b></label>
     <input type="text" placeholder="Character Name Here" name="Charname" id="Charname" required>
-  <hr>
+    <hr></div>
 
   <!--Which world, checkbox code-->
 
     <fieldset>
-          </div>
-            <div>
-              <p>What roles can you play? (Click all that apply.)</p>
+      <div>
+              <div><p>What roles can you play? (Click all that apply.)</p>
               <input type="checkbox" id="Healer" name="source" value="Healer">
-              <label for="Healer">Healer</label></div>
+                <label for="Healer">Healer</label></div>
               <div>
                 <input type="checkbox" id="Tank" name="source" value="Tank">
                 <label for="Tank">Tank</label>
