--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                 <label for="Tank">Tank</label>
               </div>
               <div>
-                <input type="checkbox" id="Melee DPS" name="source" value="Melee DPS">
+               <input type="checkbox" id="MeleeDPS" name="source" value="MeleeDPS">
                 <label for="Melee DPS">Melee DPS</label>
               </div>
               <div>
-                <input type="checkbox" id="Physical Ranged DPS" name="source" value="Physical Ranged DPS">
+                <input type="checkbox" id="PhysicalRanged" name="source" value="PhysicalRanged">
                 <label for="Physical Ranged DPS">Physical Ranged DPS</label>
               </div>
               <div>
-                <input type="checkbox" id="Magic Ranged DPS" name="source" value="Magic Ranged DPS">
+                <input type="checkbox" id="MagicRanged" name="source" value="MagicRanged">
                 <label for="Magic Ranged DPS">Magic Ranged DPS</label>
               </div>
               </fieldset>
@@ -93,27 +93,23 @@
 </div>
 <div>
 <p>What days are you available to raid?</p>
-  <input type="checkbox" id="Day" name="source" value="Monday">
+  <input type="checkbox" id="Monday" name="source" value="Monday">
   <label for="Monday">Monday</label></div>
-  <div><input type="checkbox" id="Day" name="source" value="Tuesday">
+  <div><input type="checkbox" id="Tuesday" name="source" value="Tuesday">
     <label for="Tuesday">Tuesday</label>
-  </div>
-    <div><input type="checkbox" id="Day" name="source" value="Tuesday">
-      <label for="Tuesday">Tuesday</label>
-    </div>
-    <div><input type="checkbox" id="Day" name="source" value="Wednesday">
+    <div><input type="checkbox" id="Wedesday" name="source" value="Wednesday">
       <label for="Wednesday">Wednesday</label>
     </div>
-    <div><input type="checkbox" id="Day" name="source" value="Thursday">
+    <div><input type="checkbox" id="Thursday" name="source" value="Thursday">
       <label for="Thursday">Thursday</label>
     </div>
-    <div><input type="checkbox" id="Day" name="source" value="Friday">
+    <div><input type="checkbox" id="Friday" name="source" value="Friday">
       <label for="Friday">Friday</label>
     </div>
-    <div><input type="checkbox" id="Day" name="source" value="Saturday">
+    <div><input type="checkbox" id="Saturday" name="source" value="Saturday">
       <label for="Saturday">Saturday</label>
     </div>
-    <div><input type="checkbox" id="Day" name="source" value="Sunday">
+    <div><input type="checkbox" id="Sunday" name="source" value="Sunday">
       <label for="Sunday">Sunday</label>
     </div>
 
