--- a/index.html
+++ b/index.html
@@ -60,18 +60,17 @@
               </div>
               <div>
                <input type="checkbox" id="MeleeDPS" name="source" value="MeleeDPS">
-                <label for="Melee DPS">Melee DPS</label>
+                <label for="MeleeDPS">Melee DPS</label>
               </div>
               <div>
                 <input type="checkbox" id="PhysicalRanged" name="source" value="PhysicalRanged">
-                <label for="Physical Ranged DPS">Physical Ranged DPS</label>
+                <label for="PhysicalRanged">Physical Ranged DPS</label>
               </div>
               <div>
                 <input type="checkbox" id="MagicRanged" name="source" value="MagicRanged">
-                <label for="Magic Ranged DPS">Magic Ranged DPS</label>
+                <label for="MagicRanged">Magic Ranged DPS</label>
               </div>
-              </fieldset>
-            </div>
+      </div></fieldset>
             <hr>
 
 
