--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <label for="Charname"><b>Character Name</b></label>
     <input type="text" placeholder="Character Name Here" name="Charname" id="Charname" required>
-    <hr></div>
+    <hr></div></form>
 
   <!--Which world, checkbox code-->
 
@@ -89,13 +89,12 @@
  <hr>
 
   <!--Day available-->
-</div>
 <div>
 <p>What days are you available to raid?</p>
   <input type="checkbox" id="Monday" name="source" value="Monday">
   <label for="Monday">Monday</label></div>
   <div><input type="checkbox" id="Tuesday" name="source" value="Tuesday">
-    <label for="Tuesday">Tuesday</label>
+    <label for="Tuesday">Tuesday</label></div>
     <div><input type="checkbox" id="Wedesday" name="source" value="Wednesday">
       <label for="Wednesday">Wednesday</label>
     </div>
@@ -126,9 +125,8 @@
 
 <div class="mb-3" style="text-align: center; margin-top: 0.5rem">
   <input type="reset" class="btn btn-secondary">
-  </button>
   <button type="submit" class="btn btn-primary">Submit</button>
-</div></form>
+</div>
 
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
