--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <label for="Monday">Monday</label></div>
   <div><input type="checkbox" id="Tuesday" name="source" value="Tuesday">
     <label for="Tuesday">Tuesday</label></div>
-    <div><input type="checkbox" id="Wedesday" name="source" value="Wednesday">
+    <div><input type="checkbox" id="Wednesday" name="source" value="Wednesday">
       <label for="Wednesday">Wednesday</label>
     </div>
     <div><input type="checkbox" id="Thursday" name="source" value="Thursday">
@@ -119,7 +119,7 @@
 <label for="No">No thank you, I'm good!</label><br>
 </div>
 <hr>
-<label for="birthdaytime">Birthday (This is for funsies!):</label>
+<label for="birthday">Birthday (This is for funsies!):</label>
 <input type="date" id="birthday" name="birthday">
 <hr>
 
